Fixed interface jumps.

--- a/packages/client/src/pages/PortalSettings/categories/payments/Wallet/styles/TransactionHistory.module.scss
+++ b/packages/client/src/pages/PortalSettings/categories/payments/Wallet/styles/TransactionHistory.module.scss
@@ -37,7 +37,7 @@
   flex-wrap: wrap;
   margin-bottom: 2px;
   gap: 12px;
-  align-items: baseline;
+  align-items: start;
 }
 
 .transactionHistoryBody {
